# Notion-Sidecar

./: .env.template  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release.yml
examples/: README.md  demo_scenarios.md  example_session.md
src/: agent.py  config.py  diagnostics.py  gemini_agent.py  menu.py  notion_client.py  utils.py
tests/: test_e2e.py  test_gemini_agent.py  test_notion_client.py
